#770 Add OpenAPI examples for /api/exports FIXED
